[package]
# This is NOT an official Rust project but since most code will come from
# the rust-lang/rust repo it makes sense to use this author.
authors = ["The Rust Project Developers"]
name = "std"
version = "0.1.0"

[dependencies]
sc = "0.2"

[dependencies.libc]
version = "0.2"
default-features = false
path = "libc"

[dependencies.ralloc]
default-features = false
features = ["allocator"]
git = "https://github.com/redox-os/ralloc"
optional = true

[dependencies.naive_ralloc]
optional = true
path = "naive_ralloc"

[dependencies.panic_abort]
path = "panic_abort"

[dependencies.compiler_builtins]
default-features = false
features = ["mem"]
git = "https://github.com/rust-lang-nursery/compiler-builtins"

[features]
default = ["compiler-builtins", "ralloc"]
compiler-builtins = ["compiler_builtins/compiler-builtins"]

#[profile.dev]
#panic = "abort"

[profile.release]
lto = true
